--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang = 'ko'>
-
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title> Clonet </title> <!-- 웹페이지 제목 설정 -->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Making Start-Up Web Page</title>
+    <meta name="description" content="Step by step study for making web page">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
-<body> <!-- 페이지 몸통 부분 작업 -->
-    <h1> clonet title </h1>
-
-    </form>
-
-    <!-- 자바스크립트 부분 -->
-  <script>
-      
-
-  </script>
+<body>
+    테스트용 본문입니다
 </body>
 </html>
