Feat: UserAdd SMTP COMPLETE

--- a/Apollo_Server/Email_Form.html
+++ b/Apollo_Server/Email_Form.html
@@ -56,7 +56,7 @@
             <div class="m_-7513422647994330679btn" style="Margin-bottom:20px;text-align:center">
               <u></u><a
                 style="border-radius:4px;display:inline-block;font-size:14px;font-weight:bold;line-height:24px;padding:12px 24px;text-align:center;text-decoration:none!important;color:#ffffff!important;border:1px solid #fff;font-family:Avenir,sans-serif"
-                href="http://localhost:8080/?user_id=hyemin&&repo_name=test" target="_blank"
+                href="http://13.209.116.111:5312/?user_id=hyemin&&repo_name=test" target="_blank"
                 data-saferedirecturl="https://www.google.com/url?q=https://kpu.cmail20.com/t/y-l-bzjilk-ihikujkidl-r/&amp;source=gmail&amp;ust=1642312571573000&amp;usg=AOvVaw310-sElFsJqD1fZ3lwkT9K">JOIN
                 THE PROJECT</a><u></u>
             </div>
